--- a/index.html
+++ b/index.html
@@ -170,6 +170,116 @@
       </div>
     </div>
 
+    <!-- Footer -->
+
+    <div class="footerCon" id="footerCon">
+      <div class="footerSubCon">
+      <div class="footerColumn">
+        <ul class="footerLinksList">
+          <li class="footerLinkItem">
+            <a href="#">
+              <h3>Our menu</h3>
+            </a>
+          </li>
+          <li class="footerLinkItem">
+            <a href="#">
+              <p>Breakfast</p>
+            </a>
+          </li>
+          <li class="footerLinkItem">
+            <a href="#">
+              <p>Lunch</p>
+            </a>
+          </li>
+          <li class="footerLinkItem">
+            <a href="#">
+              <p>Dinner</p>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footerColumn">
+        <ul class="footerLinksList">
+          <li class="footerLinkItem">
+            <a href="#">
+              <h3>Information</h3>
+            </a>
+          </li>
+          <li class="footerLinkItem">
+            <a href="#">
+              <p>About us</p>
+            </a>
+          </li>
+          <li class="footerLinkItem">
+            <a href="#">
+              <p>Testimonial</p>
+            </a>
+          </li>
+          <li class="footerLinkItem">
+            <a href="#">
+              <p>Event</p>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footerColumn">
+        <ul class="footerLinksList">
+          <li class="footerLinkItem">
+            <a href="#">
+              <h3>Useful Links</h3>
+            </a>
+          </li>
+          <li class="footerLinkItem">
+            <a href="#">
+              <p>Services</p>
+            </a>
+          </li>
+          <li class="footerLinkItem">
+            <a href="#">
+              <p>Support</p>
+            </a>
+          </li>
+          <li class="footerLinkItem">
+            <a href="#">
+              <p>Conditions</p>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footerColumn">
+        <ul class="footerLinksList">
+          <li class="footerLinkItem">
+            <a href="#">
+              <h3>Social handles</h3>
+            </a>
+          </li>
+          <li class="footerLinkItem">
+            <a href="#">
+              <p class="socialLink">Instagram</p>
+            </a>
+          </li>
+          <li class="footerLinkItem">
+            <a href="#">
+              <p class="socialLink">Facebook</p>
+            </a>
+          </li>
+          <li class="footerLinkItem">
+            <a href="#">
+              <p class="socialLink">Twitter</p>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    </div>
+
+
+
+
+
+
+
+
 
 
 
@@ -236,6 +346,7 @@ var chef = bodymovin.loadAnimation({
   autoplay: true, // optional
   name: "Demo Animation", // optional
 });
+
 </script>
 
   </body>
