fixed minor changed

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   </head>
   <body>
     <nav class="navbar">
+      <div class="navbarSub">
       <div class="leftNav">
         <div>
           <img
@@ -43,22 +44,23 @@
       <div class="rightNav">
         <ul class="linksList">
           <li class="linkItem">
-            <a href="#" class="link">
+            <a href="#about" class="link">
               <p class="textLink">About</p>
             </a>
           </li>
           <li class="linkItem">
-            <a href="#" class="link">
-              <p class="textLink">Contact</p>
+            <a href="#services" class="link">
+              <p class="textLink">Services</p>
             </a>
           </li>
           <li class="linkItem">
-            <a href="#" class="link">
-              <p class="textLink">Products</p>
+            <a href="#testimonials" class="link">
+              <p class="textLink">Testimonials</p>
             </a>
           </li>
         </ul>
       </div>
+    </div>
     </nav>
     <!-- time for a content  -->
     <div class="content">
@@ -75,7 +77,7 @@
             </h5>
           </div>
           <div>
-            <button class="btn exploreBtn">Explore</button>
+            <a class="btn exploreBtn" href="#about">Explore</a>
           </div>
         </div>
         <div class="contentRight" id="animContainer"></div>
@@ -99,9 +101,9 @@
                     <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti numquam assumenda in repudiandae doloremque at natus cupiditate saepe esse ad repellendus repellat velit quidem, corrupti libero laborum soluta nam dolores.</h4>
                 </div>
                 <div>
-                    <button class="btn">
+                    <a class="btn" href="#services">
                         Explore our story
-                    </button>
+                    </a>
                 </div>
             </div>
 
@@ -157,11 +159,19 @@
           <div class="descCon">
             <h6>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus eius magni perferendis perspiciatis eligendi quia ea numquam tempora eos sunt, ipsum aliquid temporibus quam illo voluptate provident natus, sequi officia!</h6>
           </div>
-          <div>
-            <h4>
-              John Doe
-            </h4>
-            <h5>Software engineer</h5>
+          <div class="contactContainer">
+            <div>
+              <a class="" href="#footer">
+                Contact
+            </a>
+            </div>
+            <div>
+              <h4>
+                John Doe
+              </h4>
+              <h5>Software engineer</h5>
+            </div>
+
           </div>
         </div>
         <div class="testimonialsRight" id="testimonialsRight">
