--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           />
         </div>
         <div>
-          <h3 class="brandName">PizzaHome</h3>
+          <a class="brandName" href="/">PizzaHome</a>
         </div>
       </div>
       <div class="rightNav">
